<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain liek_recyle copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>

    <!--//searchableDictionary 界面所用string-->
    <string name="Book_Plus">Book + </string>
    <string name="Search_Book">Search Book </string>
    <string name="Topic_seting">Topic seting</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">CLOSE</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>


    <!-- The name of the application. -->
    <string name="app_name">Say to Tom</string>

    <!-- The label for use as liek_recyle searchable item -->
    <string name="search_label">Dictionary</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">book name</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>

    <!-- General instructions in the soc_main activity. -->
    <string name="search_instructions">Use the search box in the Action Bar to look up a word</string>

    <!-- Shown above search results when we receive liek_recyle search request. -->
    <plurals name="search_results">
      <item quantity="one">%1$d result for \"%2$s\": </item>
      <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">才刚认识，就问那么私人的问题，不好吧～～～ \"%s\"</string>


    <string name="hello_world">Hello world!</string>


    <string name="hello">Hello World, SocketsActivity!</string>


    <string name="up">前</string>
    <string name="down">后</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="stop">停</string>
    <string name="track">循迹</string>

    <string name="red">红</string>
    <string name="green">绿</string>
    <string name="blue">蓝</string>


    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">清零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="title_activity_start">StartActivity</string>


    <string name="helpFillText">This application is designed to help friends answer questions in an efficient manner.\n\n

         <b>Using this Application</b>\n\n
         <b>Create A New Question:</b>\n
         This tab allows the creation of a new question.
         A user must enter a title, question, and then enter possible responses for the question.
         A user first enters a possible response in the field and then clicks the “Add a possible Answer” button.
         This will take the the possible response and add it to the list right below that field.
         Every question requires these three parts: title, question, and at least one possible response.
         Upon finishing the question a user selects the “Save Question” button in order to post there question.
         If the question was posted correctly the id of the question will flash on the screen and the “Question Id” field will be filled with this number.
         Save this number it will be the only way you can retrieve a question.\n\n

         <b>View Question Stats</b>:\n
         Want to see how many people have answered your question and want they choose?
         Click this tab. On the first screen you must enter the question id of the question you wish to view in the “Question Id” field.
         Then click “Retrieve a Question”. Provided you gave the correct id number it will take you to a screen detailing the question and the number
         of responses and the breakdown of those response.\n\n

         <b>Answer A Question</b>:\n
         Much like the View Question Stats tab you must first enter the id of the question you wish to answer in the “Question Id” field.
         Then click “Retrieve a Question”. Provided you gave the correct id number you will be taken to a screen detailing information about the question.
         Under “Possible Responses” you will be able to select one or more responses to this question by clicking which one you want.
         You response is indicated when the check mark turns green. To deselect a response click it again and the check mark will turn gray.
         When you are satisfied with your response click the “Send Answer(s)” button. Your answers will be posted.\n\n

         <b>Help</b>:\n
         This is where you are now.\n\n\n


         Copyright Paul Geromini 2012
           </string>


     <string name="helpFillText_2">This application is designed to help friends answer questions in an efficient manner.\n\n

         <b></b>\n\n
         <b>Create A New Question:</b>\n
         <b>Create A New Question:</b>\n
         <b>Create A New Question:</b>\n
         <b>Create A New Question:</b>\n
         <b>Create A New Question:</b>\n
         <b>Create A New Question:</b>\n
         This tab allows the creation of a new question.
         A user must enter a title, question, and then enter possible responses for the question.
         A user first enters a possible response in the field and then clicks the “Add a possible Answer” button.
         This will take the the possible response and add it to the list right below that field.
         Every question requires these three parts: title, question, and at least one possible response.
         Upon finishing the question a user selects the “Save Question” button in order to post there question.
         If the question was posted correctly the id of the question will flash on the screen and the “Question Id” field will be filled with this number.
         Save this number it will be the only way you can retrieve a question.\n\n

         <b>View Question Stats</b>:\n
         Want to see how many people have answered your question and want they choose?
         Click this tab. On the first screen you must enter the question id of the question you wish to view in the “Question Id” field.
         Then click “Retrieve a Question”. Provided you gave the correct id number it will take you to a screen detailing the question and the number
         of responses and the breakdown of those response.\n\n

         <b>Answer A Question</b>:\n
         Much like the View Question Stats tab you must first enter the id of the question you wish to answer in the “Question Id” field.
         Then click “Retrieve a Question”. Provided you gave the correct id number you will be taken to a screen detailing information about the question.
         Under “Possible Responses” you will be able to select one or more responses to this question by clicking which one you want.
         You response is indicated when the check mark turns green. To deselect a response click it again and the check mark will turn gray.
         When you are satisfied with your response click the “Send Answer(s)” button. Your answers will be posted.\n\n

         <b>Help</b>:\n
         This is where you are now.\n\n\n


         Copyright Paul Geromini 2012
           </string>



</resources>
